# makefilegen

./: .gitignore  Makefile  README.md  makefilegen.py  pyproject.toml
tests/: test_makefilegen.py  test_unique_list.py  unique_list.py
