[project]
name = "makefilegen"
version = "0.1.0"
description = "A Makefile generator or direct compilation tool."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
